<?xml version="1.0"?>
<package format="3">
  <name>apriltag_pose</name>
  <version>0.0.1</version>
  <description>Stub AprilTag pose node</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
</package>
