<?xml version="1.0"?>
<package format="3">
  <name>ekf2d</name>
  <version>0.0.1</version>
  <description>Simple 2D IMU-based pose estimator (x, y, yaw) publishing nav_msgs/Odometry</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>
