<?xml version="1.0"?>
<package format="3">
  <name>gps_bridge</name>
  <version>0.0.1</version>
  <description>Bridge for phone GPS (NMEA/JSON) to ROS2 /gps/fix and /gps/pose</description>

  <maintainer email="you@todo.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
