<?xml version="1.0"?>
<package format="3">
  <name>imu_orientation_viz</name>
  <version>0.0.1</version>
  <description>Real-time 3D orientation visualization using phone IMU data</description>

  <maintainer email="you@todo.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
