<?xml version="1.0"?>
<package format="3">
  <name>gps_anchor_fuser</name>
  <version>0.0.1</version>
  <description>Phase 2.5: Simple GPS anchoring for IMU dead reckoning</description>

  <maintainer email="you@odu.edu">Pratyush</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
